--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Optional" version="4.0.0" targetFramework="net472" />
   <package id="Rogero.ReactiveProperty" version="1.0.17" targetFramework="net472" />
   <package id="Serilog" version="2.9.0" targetFramework="net472" />
   <package id="Serilog.Formatting.Compact" version="1.1.0" targetFramework="net472" />
